--- a/client/index.html
+++ b/client/index.html
@@ -230,7 +230,7 @@
                         <label title="Draw the binning areas for the underlying discretization"><input type="checkbox" id="paramGrid">Draw Grid<br></label>
                     </div>
                     <div class="col-sm-3">
-                        <label title="If unchecked, only 1-letter distance mutations are considered if d>0"><input type="checkbox" id="paramMutations" checked>Soft mutations<br></label>
+                        <label title="Soft mutations consider only 1-letter distance mutations, in the case that parameter d>0"><input type="checkbox" id="paramMutations" checked>Soft mutations<br></label>
                     </div>
                     <!--<div class="col-sm-3">
                         <label title="Annotations are considered only if they partially/totally include a pattern-matched area"><input type="checkbox" id="paramIntersect">Hard intersect<br></label>
@@ -293,13 +293,13 @@
 
             $('#btConfigSearchSave').click(function()
             {
-                GVB_GLOBAL.softMutations       = paramMutations.checked;
                 GVB_GLOBAL.geo       = paramGeo.checked;
                 GVB_GLOBAL.grid  = paramGrid.checked;
-                //if(paramIntersect.checked)
-                //    GVB_GLOBAL.intersect  = "hard";
-                //else
-                //    GVB_GLOBAL.intersect  = "soft";
+                if(paramMutations.checked)
+                    GVB_GLOBAL.softMutations  = "true";
+                else
+                    GVB_GLOBAL.softMutations  = "false";
+
                 $('#searchOptions').modal('hide');
 
                 drawGrid();
@@ -335,12 +335,7 @@
             /////////////////////////////////////////////
             $('#showSearchOptions').click(function()
             {
-                //if($(this).is(":checked"))
-                //{
-                    //reloadParams(false);
-                    $('#searchOptions').modal();
-                    //$('#modalConfigParams').modal();
-                //}
+                $('#searchOptions').modal();
             });
 
 
